# LinuxWGGUI

./: .gitignore  CMakeLists.txt  LinuxWGGUI_be.ts  LinuxWGGUI_de.ts  LinuxWGGUI_en.ts  LinuxWGGUI_fr.ts  LinuxWGGUI_it.ts  LinuxWGGUI_uk.qm  LinuxWGGUI_uk.ts  README.md  linuxwggui.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  ui_SettingsDialog.h
